--- a/lang_go/_gen/decls.tmpl
+++ b/lang_go/_gen/decls.tmpl
@@ -1,9 +1,15 @@
-
 import (
+	"bufio"
 	"bytes"
 	"encoding/json"
+	"errors"
+	"fmt"
 	"net/url"
+	"os"
 	"reflect"
+	"strconv"
+	"sync"
+	"time"
 )
 
 {{ $main := . -}}
@@ -146,4 +152,166 @@ func (it *Boolean) IfNil(ifNil bool) bool {
 type jsonRpcError struct {
 	Code int `json:"code"`
 	Message string `json:"message"`
+}
+
+func ptr[T any](value T) *T { return &value }
+
+func iIf[T any](chk bool, ifTrue T, ifFalse T) T {
+	if chk {
+		return ifTrue
+	}
+	return ifFalse
+}
+
+type clientServerBase struct {
+	sync.Mutex // sync writes to stdout
+	stdout *bufio.Writer
+	waiters map[string]func(any)
+
+	LogPrefixSendRecvJsons string
+
+	// Initialized is for informational purposes only, to the importer who shall not set or mutate them.
+	// Its fields are set automatically at the appropriate initialization lifecycle instant.
+	Initialized struct {
+		Client *InitializeParams
+		Server *InitializeResult
+	}
+}
+
+func (it *clientServerBase) sendErrMsg(err any) {
+	if err == nil {
+		return
+	}
+	var json_rpc_err_msg *jsonRpcError
+	if json_rpc_err_msg, _ = err.(*jsonRpcError); json_rpc_err_msg == nil {
+		json_rpc_err_msg = &jsonRpcError{ Code: -32603, Message: fmt.Sprintf("%v", err) }
+	}
+	it.sendMsg(json_rpc_err_msg)
+}
+
+func (it *clientServerBase) sendMsg(jsonable any) {
+	err_json,_ := json.Marshal(jsonable)
+	it.Lock()
+	defer it.Unlock()
+	_, _ = it.stdout.WriteString("Content-Length: ")
+	_, _ = it.stdout.WriteString(strconv.Itoa(len(err_json)))
+	_, _ = it.stdout.WriteString("\r\n\r\n")
+	_, _ = it.stdout.Write(err_json)
+}
+
+func (it *clientServerBase) send(methodName string, params any, isReq bool, onResp func(any)) {
+	req_id := strconv.FormatInt(time.Now().UnixNano(), 36)
+	req := map[string]any{"method": methodName, "params": params}
+	if onResp != nil {
+		it.waiters[req_id] = onResp
+	}
+	if isReq {
+		req["id"] = req_id
+	}
+	it.sendMsg(req)
+}
+
+// forever keeps reading and handling LSP JSON-RPC messages incoming over `os.Stdin`
+// until reading from `os.Stdin` fails, then returns that IO read error.
+func (it *clientServerBase) forever(handleIncoming func(map[string]any) *jsonRpcError) error {
+	const buf_cap = 1024 * 1024
+
+	it.stdout = bufio.NewWriterSize(os.Stdout, buf_cap)
+	it.waiters = map[string]func(any){}
+
+	stdin := bufio.NewScanner(os.Stdin)
+	stdin.Buffer(make([]byte, buf_cap), buf_cap)
+	stdin.Split(func(data []byte, ateof bool) (advance int, token []byte, err error) {
+		if i_cl1 := bytes.Index(data, []byte("Content-Length: ")); i_cl1 >= 0 {
+			datafromclen := data[i_cl1+16:]
+			if i_cl2 := bytes.IndexAny(datafromclen, "\r\n"); i_cl2 > 0 {
+				if clen, e := strconv.Atoi(string(datafromclen[:i_cl2])); e != nil {
+					err = e
+				} else if i_js1 := bytes.Index(datafromclen, []byte("{\"")); i_js1 > i_cl2 {
+					if i_js2 := i_js1 + clen; len(datafromclen) >= i_js2 {
+						advance = i_cl1 + 16 + i_js2
+						token = datafromclen[i_js1:i_js2]
+					}
+				}
+			}
+		}
+		return
+	})
+
+	for stdin.Scan() {
+		raw := map[string]any{}
+		json_bytes := stdin.Bytes()
+		if it.LogPrefixSendRecvJsons != "" {
+			println(it.LogPrefixSendRecvJsons + ".RECV>>" + string(json_bytes) + "<<")
+		}
+		if err := json.Unmarshal(json_bytes, &raw); err != nil {
+			it.sendErrMsg(&jsonRpcError{ Code: -32700, Message: err.Error() })
+			continue
+		}
+		if raw["code"] != nil {
+			println(string(json_bytes)) // goes to stderr
+			continue
+		}
+		it.sendErrMsg(handleIncoming(raw))
+	}
+	return stdin.Err()
+}
+
+func clientServerOnResp[T any] (it *clientServerBase, onResp func(*T)) func(any) {
+	if onResp == nil {
+		return nil
+	}
+	return func(resultAsMap any) {
+		var result T
+		if resultAsMap != nil {
+			json_bytes, _ := json.Marshal(resultAsMap)
+			if err := json.Unmarshal(json_bytes, &result); err != nil {
+				it.sendErrMsg(err)
+				return
+			}
+		}
+		onResp(iIf(resultAsMap == nil, nil, &result))
+	}
+}
+
+func clientServerHandleIncoming[T any] (it *clientServerBase, handler func (*T) (any, error), msgMethodName string, msgIdMaybe any, msgParams any) {
+	var req_id string
+	if msgIdMaybe != nil {
+		req_id = fmt.Sprintf("%v", msgIdMaybe)
+	}
+	if handler == nil {
+		if req_id != "" {
+			it.sendErrMsg(errors.New("unimplemented: " + msgMethodName))
+		}
+		return
+	}
+	var params T
+	if msgParams != nil {
+		json_bytes, _ := json.Marshal(msgParams)
+		if err := json.Unmarshal(json_bytes, &params); err != nil {
+			it.sendErrMsg(&jsonRpcError{ Code: -32602, Message: err.Error() })
+			return
+		}
+	}
+	go func(params *T) {
+		if msgParams == nil {
+			params = nil
+		}
+		result, err := handler(params)
+		resp := map[string]any {
+			"result": result,
+			"id": req_id,
+		}
+		if err != nil {
+			if msgIdMaybe != nil {
+				resp["error"] = &jsonRpcError{ Code: -32603, Message: fmt.Sprintf("%v", err) }
+			}else {
+				it.sendErrMsg(err)
+				return
+			}
+		}
+		if msgIdMaybe != nil {
+			it.sendMsg(resp)
+		}
+	}(&params)
 }
