--- a/lang_go/_gen/decls_serving.tmpl
+++ b/lang_go/_gen/decls_serving.tmpl
@@ -162,5 +162,5 @@ func (it *Server) Forever() error {
 		}
 	}
 
-	return it.forever(it.handleIncoming)
+	return it.forever(os.Stdin, os.Stdout, it.handleIncoming)
 }
