polyglot / atmo tweaks

--- a/lang_go/_gen/file_pkg.tmpl
+++ b/lang_go/_gen/file_pkg.tmpl
@@ -1,4 +1,4 @@
 // {{ .GenTitle }} v{{.GenVer}} SDK for {{ .Lang.DisplayName }}: auto-generated via {{ .GenRepo }}
-module {{.PkgName}}
+module github.com/metaleap/polyglot-lsp/lang_go/lsp_v{{.GenVer}}
 
 go 1.22
