--- a/lang_go/_gen/decls_serving.tmpl
+++ b/lang_go/_gen/decls_serving.tmpl
@@ -120,7 +120,7 @@ func (it *Server) handleIncoming(raw map[string]any) *jsonRpcError {
 			return init.Server, nil
 		}, msg_method, msg_id, raw["params"])
 	default: // msg is an incoming Request or Notification
-		return &jsonRpcError{ Code: -32601, Message: "unknown method: " + msg_method}
+		return &jsonRpcError{ Code: int(ErrorCodesMethodNotFound), Message: "unknown method: " + msg_method}
 	}
 
 	return nil
