--- a/lang_go/_gen/decls_clienting.tmpl
+++ b/lang_go/_gen/decls_clienting.tmpl
@@ -49,7 +49,7 @@ func (it *Client) handleIncoming(raw map[string]any) *jsonRpcError {
 	{{- end }}
 	{{- end }}
 	default: // msg is an incoming Request or Notification
-		return &jsonRpcError{ Code: -32601, Message: "unknown method: " + msg_method}
+		return &jsonRpcError{ Code: int(ErrorCodesMethodNotFound), Message: "unknown method: " + msg_method}
 	}
 
 	return nil
