--- a/lang_go/_gen/type_Structure.tmpl
+++ b/lang_go/_gen/type_Structure.tmpl
@@ -3,6 +3,6 @@
 /*TStruc*/struct {
 	{{ range $bag.Type.Properties }}
 	{{ .DoDocComments $bag.Main }}
-	{{ .NameUp }} {{ $bag.Main.DoTypeOptional .Type ($bag.Main.If .HasConstVal false .Optional) }} `json:"{{ .Name }},omitempty"`
+	{{ .NameUp }} {{ $bag.Main.DoTypeOptional .Type ($bag.Main.If .HasConstVal false .OptionalOrOr) }} `json:"{{ .Name }},omitempty"`
 	{{ end }}
 }
