--- a/lang_go/_gen/decls_serving.tmpl
+++ b/lang_go/_gen/decls_serving.tmpl
@@ -31,7 +31,7 @@ type Server struct {
 {{- range $msg.DocLines }}
 // {{ . }}
 {{- end }}
-func (it *Server) {{if $msg.IsReq}}Request{{else}}Notify{{end}}_{{ $msg.MethodNameSafe }} (params *{{ $msg.UnaryParamsTypeName }}{{if $msg.IsReq}}, onResp func(*{{- if $msg.IsReq -}}{{- $main.DoType $msg.ResultType -}}{{- end -}}){{end}}) {
+func (it *Server) {{if $msg.IsReq}}Request{{else}}Notify{{end}}_{{ $msg.MethodNameSafe }} (params {{ $msg.UnaryParamsTypeName }}{{if $msg.IsReq}}, onResp func({{- $main.DoType $msg.ResultType -}}){{end}}) {
 	var on_resp func(any){{- if $msg.IsReq -}} = clientServerOnResp(&it.clientServerBase, onResp){{- end }}
 	go it.send("{{$msg.Method}}", params, {{ $msg.IsReq }}, on_resp)
 }
@@ -179,14 +179,14 @@ func (it *Server) Forever() error {
 		}
 		it.On_initialized = func(params *InitializedParams) (any, error) {
 			if it.On_workspace_didChangeWatchedFiles != nil {
-				it.Request_client_registerCapability(&RegistrationParams{
+				it.Request_client_registerCapability(RegistrationParams{
 					Registrations: []Registration{
 						{Method: "workspace/didChangeWatchedFiles", Id: "workspace/didChangeWatchedFiles",
 							RegisterOptions: DidChangeWatchedFilesRegistrationOptions{Watchers: []FileSystemWatcher{
 								{Kind: WatchKindChange | WatchKindCreate | WatchKindDelete,
 									GlobPattern: GlobPattern(&PatternOrRelativePattern{Pattern: ptr(String("**/*"))})}}}},
 					},
-				}, func(*Void) {})
+				}, func(Void) {})
 			}
 			if old_initialized != nil {
 				return old_initialized(params)
