--- a/lang_go/_gen/decls_serving.tmpl
+++ b/lang_go/_gen/decls_serving.tmpl
@@ -12,6 +12,7 @@ type Server struct {
 		CompletionTriggerChars []string
 		SignatureTriggerChars []string
 		Commands []string
+		DocumentSymbolsMultiTreeLabel string
 	}
 
 	{{ range $main.Decls.Extras -}}
@@ -107,7 +108,9 @@ func (it *Server) handleIncoming(raw map[string]any) *jsonRpcError {
 				caps.DocumentHighlightProvider = &BooleanOrDocumentHighlightOptions{Boolean: ptr(Boolean(true))}
 			}
 			if it.On_textDocument_documentSymbol != nil {
-				caps.DocumentSymbolProvider = &BooleanOrDocumentSymbolOptions{Boolean: ptr(Boolean(true))}
+				caps.DocumentSymbolProvider = iIf(it.Lang.DocumentSymbolsMultiTreeLabel == "",
+					&BooleanOrDocumentSymbolOptions{Boolean: ptr(Boolean(true))},
+					&BooleanOrDocumentSymbolOptions{DocumentSymbolOptions: &DocumentSymbolOptions{Label: ptr(String(it.Lang.DocumentSymbolsMultiTreeLabel))}})
 			}
 			if it.On_textDocument_codeAction != nil {
 				caps.CodeActionProvider = &BooleanOrCodeActionOptions{Boolean: ptr(Boolean(true))}
